# Symulator_FBD

./: Aplikacja_symulatora.cpp  Aplikacja_symulatora.h  Blok_addsub.cpp  Blok_addsub.h  Blok_calkowania.cpp  Blok_calkowania.h  Blok_dodawania.cpp  Blok_dodawania.h  Blok_dzielenia.cpp  Blok_dzielenia.h  Blok_funkcyjny.cpp  Blok_funkcyjny.h  Blok_generatora.cpp  Blok_generatora.h  Blok_licznika.cpp  Blok_licznika.h  Blok_mnozenia.cpp  Blok_mnozenia.h  Blok_odczytu.cpp  Blok_odczytu.h  Blok_odejmowania.cpp  Blok_odejmowania.h  Blok_stalej.cpp  Blok_stalej.h  Blok_wzmocnienia.cpp  Blok_wzmocnienia.h  Blok_zapisu.cpp  Blok_zapisu.h  CMakeLists.txt  Definicje.h  Generator_sygnalu.cpp  Generator_sygnalu.h  Interfejs_bloku_funkcyjnego.h  Interfejs_polaczenia.h  Interfejs_wejscia.h  Interfejs_wyjscia.h  Konstruktor_FBD.cpp  Konstruktor_FBD.h  Kontener_FBD.cpp  Kontener_FBD.h  (+25 more)
